#
# (C) Copyright IBM Corp. 2005
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  This
# file and program are licensed under a BSD style license.  See
# the Copying file included with the OpenHPI distribution for
# full licensing terms.
#
# Authors:
#   David Judkovics  <djudkovi@us.ibm.com>
#   Daniel de Araujo <ddearauj@us.ibm.com>
#

MAINTAINERCLEANFILES = Makefile.in 

INCLUDES 		= -I$(top_srcdir)/include 

TESTS = \
	start_test.sh \
	t0.sh \
	t1.sh \
	t2.sh \
	end_test.sh

clean:
	rm -f *.log
	rm -f *.result

